--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.js"></script>
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
   </body>
 </html>
